testsuite/tests/rename/should_fail/T18145.stderr

T18145.hs:10:44: error: Not in scope: type variable ‘a’

T18145.hs:14:41: error: Not in scope: type variable ‘a’

T18145.hs:17:41: error: Not in scope: type variable ‘a’
